Se agrego ejercicios de tablas

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -10,7 +10,10 @@
 <header>
     <img src="imagenes/logo_mundo.png">
     <h1>Diario On-line</h1>
-    </header>
+</header>
+<nav>
+    <a HREF="ej_listas.html">Seccion de cocina</a>
+</nav>
 <section>
     <h2> <b>CordoBici</b> </h2>
 
