--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -20,46 +20,46 @@
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
 <form id="Formulario_suscripción">
     <p>
-        Nombre: <input type="text" name="Nombre" placeholder="Nombre">
+        <label for="Nombre"> Nombre: </label> <input type="text" name="Nombre" placeholder="Nombre" id="Nombre">
     </p>
     <p>
-        Apellido: <input type="text" name="Apellido" placeholder="Apellido">
+        <label for="Apellido"> Apellido: </label> <input type="text" name="Apellido" placeholder="Apellido" id="Apellido">
     </p>
     <p>
-        Sexo: Masculino <input type="radio" name="Sexo" value="Masculino">
-              Femenino <input type="radio" name="Sexo" value="Femenino">
+        Sexo: <label for="Masculino"> Masculino </label> <input type="radio" name="Sexo" value="Masculino" id="Masculino">
+        <label for="Femenino"> Femenino </label> <input type="radio" name="Sexo" value="Femenino" id="Femenino">
     </p>
     <p>
-        Edad: <input type="number" name="Edad" placeholder="Edad">
+        <label for="Edad"> Edad: </label> <input type="number" name="Edad" placeholder="Edad" id="Edad">
     </p>
     <p>
-        Email: <input type="email" name="Email" placeholder="Email@dominio.com">
+        <label for="Email"> Email: </label> <input type="email" name="Email" placeholder="Email@dominio.com" id="Email">
     </p>
     <p>
-        Usuario: <input type="text" name="Usuario" placeholder="Usuario">
+        <label for="Usuario"> Usuario: </label> <input type="text" name="Usuario" placeholder="Usuario" id="Usuario">
     </p>
     <p>
-        Password: <input type="password" name="Password" placeholder="Password">
+        <label for="Password"> Password: </label> <input type="password" name="Password" placeholder="Password" id="Password">
     </p>
     <p>
-        Confirmar Password: Password: <input type="password" name="Confirmar_Password" placeholder="Password">
+        <label for="Confirmar_Password"> Confirmar Password: </label> <input type="password" name="Confirmar_Password" placeholder="Password" id="Confirmar_Password">
     </p>
     <p>
-        Tipo de servicio: Free <input type="checkbox" name="Tipo_de_Servicio" value="Free"> /
-                      Standard <input type="checkbox" name="Tipo_de_Servicio" value="Standard">/
-                      Premium <input type="checkbox" name="Tipo_de_Servicio" value="Premium">
+        Tipo de servicio: <label for="Free"> Free </label> <input type="checkbox" name="Tipo_de_Servicio" value="Free" id="Free"> /
+                          <label for="Standard"> Standard </label> <input type="checkbox" name="Tipo_de_Servicio" value="Standard" id="Standard">/
+                          <label for="Premium"> Premium </label> <input type="checkbox" name="Tipo_de_Servicio" value="Premium" id="Premium">
     </p>
     <p>
-        Tema:
-        <select>
-            <option> Política </option>
-            <option> Negocios </option>
-            <option> Tecnología </option>
-            <option> Salud </option>
+        <label for="Tema"> Tema: </label>
+        <select id="Tema">
+            <option value="Politica"> Política </option>
+            <option value="Negocios"> Negocios </option>
+            <option value="Tecnologia"> Tecnología </option>
+            <option value="Salud"> Salud </option>
         </select>
     </p>
     <p>
-        Agregue un comentario: <textarea>  </textarea>
+        <label for="Comentario"> Agregue un comentario: </label> <textarea id="Comentario">  </textarea>
     </p>
     <p>
         <button type="button"> Boton de Enviar </button>
