--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -17,6 +17,7 @@
 <body>
 <!-- Hola profe XD-->
 <table>
+    <caption> Congresos y Eventos</caption>
     <thead>
         <th>Siglas</th>
         <th>Congreso o Evento</th>
