--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
 
+    <style>
+        #tituloPrincipal
+        {
+            color: crimson;
+        }
+        .tituloNoticia
+        {
+            font-size: 25px;
+        }
+        body
+        {
+            font-family: 'Century Gothic';
+        }
+    </style>
 </head>
 <body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
