Se realizo el ejercicio de Pseudo clases

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -17,6 +17,18 @@
         {
             font-family: 'Century Gothic';
         }
+        a:link, a:visited
+        {
+            color: #b4c5ff;
+        }
+        a:hover
+        {
+            font-size: 1.4em;
+        }
+        a:active
+        {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
