Se agregaron ejercicios de Hoja de estilos enlazada

--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8">
     <title>CV Agustina Aliciardi</title>
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
-    <style>
-        body{
-            text-align: center;
-            font-family: 'Gugi', cursive;
-        }
-        div{
-            border: 2px solid #1f1bff;
-            margin: 10px;
-            padding: 5px 30px;
-        }
-        img{
-            width: 50px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagenes/icono_cv.jpg">
+    <link rel="stylesheet" href="Mi_Estilo.css" type="text/css">
+
 </head>
 <body>
 
-<div>
-    <img src="imagenes/icono_usuario.jpg">
+<div class="especial">
+    <img src="imagenes/icono_usuario.jpg" id="principal">
     <h1>Nombre Alumno</h1>
     <h2>Ing. en Computacion</h2>
 </div>
