Se agregaron ejercicios de 1era y 2da Web

--- a/Ejercicios-JavaScript/primerWeb.html
+++ b/Ejercicios-JavaScript/primerWeb.html
@@ -7,7 +7,7 @@
     <link href="miEstilo.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="misFunciones.js"></script>
 </head>
-<body class="body-num" onload="alert('Hola profe!!')">
+<body class="body-num" onload="alert('Hola mundo :D')">
 
 <div class="centrado div-conver">
     <h1>Conversor de Unidades</h1>
@@ -22,11 +22,12 @@
                 <option value="unid_pie">Pies</option>
                 <option value="unid_pulgadas">Pulgadas</option>
             </select>
-            <button>
+            <button onclick="Cargarweb()">
                 Segunda Web!
             </button>
         </p>
     </form>
 </div>
+
 </body>
 </html>
