--- a/Ejercicios-JavaScript/operacionesMatematicas.html
+++ b/Ejercicios-JavaScript/operacionesMatematicas.html
@@ -17,28 +17,28 @@
             +
             <input id="nums2" type="text" name="sum_num2" onchange="calcular_suma()">
             =
-            <input id="totalS" type="text" name="sum_total" disabled>
+            <span id="totalR" name="sum_total" ></span>
         </p>
         <p>
             <input id="numr1" type="text" name="res_num1" onchange="calcular_resta()">
             -
             <input id="numr2" type="text" name="res_num2" onchange="calcular_resta()">
             =
-            <input id="totalR" type="text" name="res_total" disabled>
+            <span id="totalR" name="res_total" ></span>
         </p>
         <p>
             <input id="numm1" type="text" name="mul_num1" onchange="calcular_multiplicacion()">
             x
             <input id="numm2" type="text" name="mul_num2" onchange="calcular_multiplicacion()">
             =
-            <input id="totalM" type="text" name="mul_total" disabled>
+            <span id="totalR" name="mul_total" ></span>
         </p>
         <p>
             <input id="numd1" type="text" name="div_num1" onchange="calcular_division()">
             /
             <input id="numd2" type="text" name="div_num2" onchange="calcular_division()">
             =
-            <input id="totalD" type="text" name="div_total" disabled>
+            <span id="totalR" name="div_total" ></span>
         </p>
     </form>
 </div>
